--- a/info.html
+++ b/info.html
@@ -12,3 +12,7 @@ git config --global unset http.proxy
 
 git config --global --unset http.proxy
 
+git config --global http.sslVerify false
+git config --global https.sslVerify false
+git config --global http.proxy http://user:pass@yourproxy:port
+git config --global https.proxy http://user:pass@yourproxy:port
