Updated some info

--- a/info.html
+++ b/info.html
@@ -16,3 +16,16 @@ git config --global http.sslVerify false
 git config --global https.sslVerify false
 git config --global http.proxy http://user:pass@yourproxy:port
 git config --global https.proxy http://user:pass@yourproxy:port
+
+
+********************git command for push and pull files ***************************************
+
+$ git remote add origin "git path name.git"
+
+$ git add {file name or folder name}
+
+$ git status  // to check the current status.
+
+$ git commit -m "{type the message for update}" {file name}
+
+$ git push or pull origin master
